@@ -13,6 +13,7 @@
 https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev3\...master[Check the HEAD diff]
 
  * added `max-event-queue-length` setting. ({pull}67[#67])
+ * changed name that the agent reports itself with to the APM server from `elasticapm-python` to `python`. This aligns the Python agent with other languages. ({pull}104[#104])
 
 [[release-v1.0.0.dev3]]
 [float]
